--- a/src/nos-realisations.html
+++ b/src/nos-realisations.html
@@ -25,338 +25,16 @@ keywords:
   </div>
 </section>
 
-
 <section class="menu section">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Un engagement formel&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg pb-5">&nbsp;&nbsp;envers l'excellence continue<br></h2>
-        </div>
-        <div class="menu_content">
-          <div class="container to-be-100">
-            <p class="menu_content-p">
-              Nous sommes fiers de notre engagement formel envers l’excellence continue. Chez DMB, chaque brique posée
-              est imprégnée de notre engagement à offrir des résultats exceptionnels à nos clients, à respecter les
-              délais et à dépasser les attentes.
-              <br><br>
-              DMB Construction est votre partenaire de confiance pour des projets de construction qui allient
-              professionnalisme, qualité et innovation. Nous sommes prêts à relever les défis les plus exigeants et à
-              transformer vos concepts en réalité.
-              <br><br>
-              Chez DMB, chaque construction est une déclaration formelle de notre engagement à bâtir un avenir solide et
-              prospère.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 pb-5 text-bg">&nbsp;&nbsp;Construction d’un entrepot</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">&nbsp;&nbsp;Rénovation d'un appartement<br>et création d'un spa et jacuzzi</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 1.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 2.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 3.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 4.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 5.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 6.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/Calque 7.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/IMG-20241008-WA0006.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/IMG-20241008-WA0010.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/entrepot/IMG-20241008-WA0032.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;Extension et surélévation<br>
-            d’un Ephad</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 10.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 11.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 12.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 13.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 14.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 8.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/Calque 9.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/surelevation/IMG-20241008-WA0016.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">Reprises en structure à<br>
-            la suite d’un incendie.</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/reprise/Calque 15.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/reprise/Calque 16.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/reprise/Calque 21.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/reprise/IMG-20241008-WA0022.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Extension de maison.</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/extension/Calque 22.png" alt="" class=" menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/Calque 23.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/Calque 24.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/Calque 25.png" alt="" class="menu_image-owl2">
-            </div>
-
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0011.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0012.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0014.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0015.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0018.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0019.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0020.jpg" alt="" class="menu_image-owl2">
-            </div>
-
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0021.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0033.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/extension/IMG-20241008-WA0034.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’un collectif</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 26.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 27.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 28.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 29.png" alt="" class="menu_image-owl2">
-            </div>
-
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 30.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 31.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/Calque 32.png" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/IMG-20241008-WA0007.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/IMG-20241008-WA0009.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/construction/IMG-20241008-WA0013.jpg" alt="" class="menu_image-owl2">
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’une
-            piscine municipale</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0001.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0003.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0004.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0005.jpg" alt="" class="menu_image-owl2">
-            </div>
-
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0008.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0024.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0025.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0026.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0027.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0028.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0029.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0031.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Rénovation d'un appartement</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;et création d'un spa et jacuzzi</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/renovation/IMG_1251.jpeg" alt="" class="menu_image-owl2">
-            </div>
             <div class="menu_image">
               <img src="./assets/img/renovation/IMG_5076.jpeg" alt="" class="menu_image-owl2">
             </div>
@@ -401,8 +79,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Construction</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'une piscine municipale</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">&nbsp;&nbsp;Construction d'une piscine municipale</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -444,11 +122,17 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Extension</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;de maison</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">Extension de maison</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
+            <div class="menu_image">
+              <img src="./assets/img/extension2/IMG_3639.jpeg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/maison1.jpeg" alt="" class="menu_image-owl2">
+            </div>
             <div class="menu_image">
               <img src="./assets/img/extension2/IMG_2505.jpeg" alt="" class="menu_image-owl2">
             </div>
@@ -494,9 +178,6 @@ keywords:
               <img src="./assets/img/extension2/IMG_3638.jpeg" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/extension2/IMG_3639.jpeg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
               <img src="./assets/img/extension2/IMG_4448.jpeg" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
@@ -525,8 +206,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Création</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'un escalier</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">Création d'un escalier</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -578,19 +259,19 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Rénovation</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;de façades</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">Rénovation de façades</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
+            <div class="menu_image">
+              <img src="./assets/img/facade1.JPG" alt="" class="menu_image-owl2">
+            </div>
             <div class="menu_image">
               <img src="./assets/img/renovation2/bec6dd38-c928-43dc-98f3-695106188f68.JPG" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
               <img src="./assets/img/renovation2/c6b8dc59-6a20-487f-a31e-ed598b65d664.JPG" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/renovation2/ca494b7e-90db-4112-8f71-e9a0826f930b (1).JPG" alt="" class="menu_image-owl2">
             </div>
           </div>
         </div>
@@ -606,8 +287,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Extension et surélévation</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'un EPHAD</h2>
+          <h2 class="menu_header-title slide-up linear-after6">RéALISATIONS</h2>
+          <h2 class="menu_header-title2 slide-down text-bg">Extension et surélévation d'un EPHAD</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
