--- a/src/accueil.html
+++ b/src/accueil.html
@@ -17,8 +17,13 @@ keywords:
       </div>
       <div class="col-lg-6">
         <div class="menu_header">
-          <h2 class="menu_header-title black-after">Nous sommes&nbsp;</h2>
-          <h2 class="menu_header-title2">&nbsp;&nbsp;dmb construction</h2>
+          <div class="spacer"></div>
+          <h2 class="menu_header-title slide-up">Nous sommes&nbsp;</h2>
+          <div class="spacer"></div>
+          <span class="black-after"></span>
+          <div class="spacer"></div>
+          <h2 class="menu_header-title2 slide-down">&nbsp;&nbsp;dmb construction</h2>
+          <div class="spacer"></div>
         </div>
         <div class="menu_content">
           <h3 class="menu_content-title">Une entreprise de construction</h3>
@@ -44,8 +49,8 @@ keywords:
 
 <section class="mene pt-0">
   <div class="menu_header2">
-    <h2 class="menu_header-title linear-after">Construisons&nbsp;</h2>
-    <h2 class="menu_header-title2 text-white">&nbsp;&nbsp;ensemble l’avenir</h2>
+    <h2 class="menu_header-title linear-after slide-up">Construisons&nbsp;</h2>
+    <h2 class="menu_header-title2 text-white slide-down">&nbsp;&nbsp;ensemble l’avenir</h2>
   </div>
   <div class="section bg-black pb-5">
     <div class="container-fluid">
@@ -58,7 +63,7 @@ keywords:
               à la réalisation.
             </p>
             <div class="mt-5 pt-3">
-              <a href="{% link contact.html %}" class="menu_content-link2">Nous contacter</a>
+              <a href="{% link nos-prestations.html %}" class="menu_content-link2">VOIR NOS PRESTATIONS</a>
             </div>
           </div>
         </div>
@@ -91,7 +96,7 @@ keywords:
 
 <section class="value section pt-5">
   <div class="menu_header pb-0">
-    <h2 class="menu_header-title2 linear-before">&nbsp;&nbsp;NOS VALEURS</h2>
+    <h2 class="menu_header-title2 linear-before slide-down">&nbsp;&nbsp;NOS VALEURS</h2>
   </div>
   <div class="container">
     <div class="row">
@@ -99,7 +104,7 @@ keywords:
         <div class="menu_image">
           <div class="menu_image-black">
           </div>
-          <img src="./assets/img/value.png" alt="" class="menu_image-img4">
+          <img src="./assets/img/value.png" alt="" class="menu_image-img444">
         </div>
         <div class="menu_image-faq">
           <div class="row align-items-center faq-item">
@@ -161,12 +166,12 @@ keywords:
 </section>
 
 
-<section class="mene section-y pt-5">
+<section class="mene section-y pt-5 pb-0">
   <div class="menu_header2 container justify-content-start">
     <h2 class="menu_header-title linear-after-services text-left">&nbsp;</h2>
-    <h2 class="menu_header-title2 text-white text-left">&nbsp;<span class="text text-left">NOS<br></span>&nbsp;SERVICES</h2>
+    <h2 class="menu_header-title2 text-white text-left">&nbsp;<span class="text text-left slide-down">NOS<br></span>&nbsp;<span class="slide-down">SERVICES</span></h2>
   </div>
-  <div class="bg-black p-y-5">
+  <div class="bg-black p-y-5 pb-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-12">
@@ -246,18 +251,24 @@ keywords:
           </div>
           
         </div>
+
+        <div class="slider_content-button w-auto">
+          <a href="{% link nos-prestations.html %}" class="slider_content-button--a">
+            TOUTES NOS PRESTATIONS
+          </a>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="projects bg-off">
+<section class="projects bg-off pt-5">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header2 container justify-content-start">
-          <h2 class="menu_header-title linear-after2 text-left">&nbsp;Projets</h2>
-          <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp;récents</h2>
+          <h2 class="menu_header-title linear-after2 text-left slide-up">&nbsp;Projets</h2>
+          <h2 class="menu_header-title2 text-white text-left slide-down">&nbsp;&nbsp;récents</h2>
         </div>
         <div class="menu_image">
           <img src="./assets/img/projects.jpeg" alt="" class="menu_image-img5">
@@ -277,7 +288,7 @@ keywords:
             <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
           </div>
           <div class="mt-5">
-            <a href="{% link nos-prestations.html %}" class="menu_content-link">VOIR NOS PRESTATIONS</a>
+            <a href="{% link nos-realisations.html %}" class="menu_content-link">VOIR NOS REALISATIONS</a>
           </div>
         </div>
         <div class="col-md-7">
@@ -326,8 +337,8 @@ keywords:
       </div>
       <div class="col-md-6">
         <div class="menu_header3">
-          <h2 class="menu_header-title"><span class="black-after2">La sécurité</span></h2>
-          <h2 class="menu_header-title">
+          <h2 class="menu_header-title slide-up"><span class="black-after2">La sécurité</span></h2>
+          <h2 class="menu_header-title slide-down">
             notre priorité absolue</h2>
         </div>
         <div class="menu_content">
@@ -349,30 +360,30 @@ keywords:
   <hr class="bbhr2 mb-5">
 </section>
 <section class="engagement bg-off">
-  <div class="container">
+  <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-md-12 pt-5">
           <div class="menu_header pb-3 mb-4">
-            <h2 class="menu_header-title">NOS ENGAGEMENTS</h2>
+            <h2 class="menu_header-title slide-up">NOS ENGAGEMENTS</h2>
           </div>
         </div>
-          <div class="engagement_icons w-100 d-flex justify-content-center pb-5">
-            <div class="row justify-content-center align-items-center w-100">
-              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
-                <img class="engagement_icons-img" src="./assets/img/Picto_satisfaction_client.webp" />
-                <p class="engagement_icons-p">Satisfactions clients</p>
+          <div class="engagement_icons section pt-0 w-100 d-flex justify-content-center pb-5">
+            <div class="row justify-content-between w-100 mx-auto">
+              <div class="col-lg-3 col-md-6 g-2 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/newicon1.webp" />
+                <p class="engagement_icons-p">Satisfaction clients</p>
               </div>
-              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
-                <img class="engagement_icons-img" src="./assets/img/Picto_Communication_claire_et_transparence.webp" />
+              <div class="col-lg-4 col-md-6 g-2 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/newicon2.webp" />
                 <p class="engagement_icons-p">Communication claire
                   et transparence</p>
               </div>
-              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
-                <img class="engagement_icons-img" src="./assets/img/Picto_excellence.webp" />
+              <div class="col-lg-2 col-md-6 g-2 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/newicon3.webp" />
                 <p class="engagement_icons-p mt-2">L’excellence continue</p>
               </div>
-              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
-                <img class="engagement_icons-img" src="./assets/img/Picto_Innovation.webp" />
+              <div class="col-lg-3 col-md-6 g-2 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/newicon4.webp" />
                 <p class="engagement_icons-p">Innovation</p>
               </div>
             </div>
@@ -399,6 +410,20 @@ keywords:
     }
   }
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
