--- a/src/nos-prestations.html
+++ b/src/nos-prestations.html
@@ -28,8 +28,9 @@ keywords:
     <div class="row">
       <div class="col-lg-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">La maçonnerie chez DMB&nbsp;</h2>
-          <h2 class="menu_header-title2 mt-3"><span class="white-bg px-0 mx-0">&nbsp;&nbsp;tradition et innovation
+          <h2 class="menu_header-title slide-up">La maçonnerie chez DMB&nbsp;</h2>
+          <span class="linear-afternn" ></span>
+          <h2 class="menu_header-title2 slide-down mt-3"><span class="white-bg px-0 mx-0">&nbsp;&nbsp;tradition et innovation
               pour</span><br>
               <div class="text-bg2 pb-0">
                 des bâtiments durables<br>
@@ -62,11 +63,12 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left">
-      <h2 class="menu_header-title pb-0 mb-0">Construction neuve &nbsp;<br><br></h2>
+      <h2 class="menu_header-title slide-up pb-0 mb-0">Construction neuve &nbsp;<br><br></h2>
     </div>
     <div class="row align-items-start">
-      <div class="col-lg-5">
-        <div class="menu_content linear-before6">
+      <div class="col-lg-6">
+        <div class="menu_content">
+          <span class="linear-before6" ></span>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction s’engage à accompagner ses clients dans chaque étape de leur projet de construction
@@ -89,7 +91,7 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-lg-7">
+      <div class="col-lg-6">
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
@@ -104,17 +106,18 @@ keywords:
 <section class="menu section">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-7">
-        <div class="menu_image linear-before41">
+      <div class="col-lg-6">
+        <div class="menu_image">
+          <span class="linear-before41"  ></span>
           <div class="menu_image-black3">
           </div>
           <img src="./assets/img/removation.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="menu_content">
           <div class="menu_header justify-content-center pb-0 to-be-top">
-            <h2 class="menu_header-title pb-0">Rénovation et réhabilitation<br></h2>
+            <h2 class="menu_header-title slide-down pb-0">&nbsp; Rénovation et réhabilitation<br></h2>
           </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -146,10 +149,10 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left2">
-      <h2 class="menu_header-title pb-5">Extension et surélévation &nbsp;<br></h2>
+      <h2 class="menu_header-title slide-up pb-5">Extension et surélévation &nbsp;<br></h2>
     </div>
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="menu_content">
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -173,8 +176,9 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-lg-7">
-        <div class="menu_image linear-before66">
+      <div class="col-lg-6">
+        <div class="menu_image">
+          <span class="linear-before66" ></span>
           <div class="menu_image-black2">
           </div>
           <img src="./assets/img/IMG_3638.jpeg" alt="" class="menu_image-img4">
@@ -185,20 +189,21 @@ keywords:
 </section>
 
 
-<section class="menu section pt-5">
+<section class="menu section pt-5 mt-5">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-7">
-        <div class="menu_image linear-before41">
+      <div class="col-lg-6">
+        <div class="menu_image">
+          <span class="linear-before41"  ></span>
           <div class="menu_image-black3">
           </div>
           <img src="./assets/img/genie.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="menu_content">
           <div class="menu_header justify-content-center pb-0 to-be-top">
-            <h2 class="menu_header-title pb-0"> &nbsp;&nbsp; Génie civil et infrastructure<br></h2>
+            <h2 class="menu_header-title slide-down pb-0"> &nbsp;&nbsp; Génie civil et infrastructure<br></h2>
           </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -232,11 +237,11 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left2">
-      <h2 class="menu_header-title pb-0">Installation d’équipements<br>
+      <h2 class="menu_header-title slide-up pb-0">Installation d’équipements<br>
         spécifiques</h2>
     </div>
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="menu_content">
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -259,8 +264,9 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-lg-7">
-        <div class="menu_image linear-before66">
+      <div class="col-lg-6">
+        <div class="menu_image">
+          <span class="linear-before66"  ></span>
           <div class="menu_image-black2">
           </div>
           <img src="./assets/img/pool.jpeg" alt="" class="menu_image-img4">
