--- a/contact.html
+++ b/contact.html
@@ -107,8 +107,8 @@
         </p>
       </div>
       <div class="slider_content-button2 d-flex justify-content-center pt-0 mt-0">
-        <a href="mailto:COMMERCIAL@DMBCONSTRUCTION.COM" class="slider_content-button--a1 text-center">
-          COMMERCIAL@DMBCONSTRUCTION.COM
+        <a href="mailto:dmb.batiment@gmail.com" class="slider_content-button--a1 text-center">
+          dmb.batiment@gmail.com
         </a>
       </div>
     </div>
