- image fixed on small screen

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div class="menu_image">
           <!-- <div class="menu_image-black">
           </div> -->
-          <img src="./assets/img/rse-image.png" alt="" class="menu_image-img444">
+          <img src="./assets/img/rse-image.png" alt="" class="menu_image-img444 responsive-image">
         </div>
         <div class="menu_image-faq">
           <div class="row align-items-center faq-item">
