--- a/nos-realisations.html
+++ b/nos-realisations.html
@@ -151,6 +151,12 @@
                 <div class="menu_image">
                   <img src="./assets/img/piscine_/8.JPG" alt="" class="menu_image-owl2">
                 </div>  
+                <div class="menu_image">
+                  <img src="./assets/img/piscine_/piscine_riva_1.jpg" alt="" class="menu_image-owl2">
+                </div>  
+                <div class="menu_image">
+                  <img src="./assets/img/piscine_/piscine_riva_2.jpg" alt="" class="menu_image-owl2">
+                </div>  
               </div>
             </div>
           </div>
@@ -352,7 +358,7 @@
               <img src="./assets/img/creationn/creation-beton-1.jpg" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/creationn/creation-beton-2.jpg" alt="" class="menu_image-owl2">
+              <img src="./assets/img/creationn/escalier-beton-2.jpg" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
               <img src="./assets/img/creationn/creation-beton-3.jpg" alt="" class="menu_image-owl2">
